egonlang-core/res/examples/invalid/prefix_expr_bang_on_void_expr.eg
!void;

// out: TypeError: mismatched types: expected type `Bool` but received `Void`